# private-clause

./: .gitignore  GEMINI.md  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
src/private_clause/: documents.py  main.py  neo4j_setup.py  ollama_setup.py  utils.py
